Migrated testing to Junit5. Updated all dependencies. Added BearerTokenWrapper to openapi module to facilitate JWT authorization and updated spec to 3.1.